@@ -33,6 +33,7 @@ ChangeLog
 [+] * New NULL service for SMSD.
 [+] * RunOnReceive now gets environment variables with SMS data.
 [-] * Fixed AT lines splitting to work properly with quotes.
+[-] * Separate getting information for Motorola phones (bug #1076).
     
 20100106 - 1.27.90
 
